app/public/style.css
@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
.hidden {
    display: none !important; 
}
body {
    background: #f0b323;
    color: #000; 
    display: flex;
    align-content: center;
    flex-wrap: wrap;
    flex-direction: column;
    transition: background-color 300ms ease, color 300ms ease; 
    &.dark {
        background: #000; 
        color: #fff; 
    }
    main {
        display: flex; 
        flex-direction: column; 
        align-items: center; 
        padding-bottom: 50px; 
        font-family: "Special Elite", system-ui;
        font-weight: 400;
        font-style: normal;
        width: calc(100% - 30px);
        max-width: 1330px;
        svg {
            position: absolute;
            top: 23px;
            right: 27px;
        }
        svg:hover, 
        button:hover {
            cursor: pointer; 
        }
        #lineref-buttons {
            margin-bottom: 30px; 
            display: flex;
            flex-wrap: wrap;
            gap: 10px;
            justify-content: center;
            button {
                background: #fff;
                padding: 10px 15px;
                font-size: 16PX;
                font-family: "Special Elite", system-ui;
                border: none; 
                &:hover {
                    background: #000; 
                    color: #fff; 
                }
                &.active {
                    background: #000; 
                    color: #fff; 
                }
            }
        }
        h1 {
            font-size: 2rem; 
            span {
                text-transform: uppercase;
                font-size: 4rem;
            }
        }
        #map {
            width: 100%;
            height: 600px;
            @media (max-width: 800px) {
                height: 400px; 
            }
            @media (max-width: 600px) {
                height: 300px; 
            }
        }
        a {
            font-weight: 600; 
            color: #000; 
        }
    }
}

